<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboard_dest">

    <fragment
        android:id="@+id/dashboard_dest"
        android:name="com.adam.app.mydeviceinfo.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/system_dest"
        android:name="com.adam.app.mydeviceinfo.ui.system.SystemFragment"
        android:label="@string/nav_system"
        tools:layout="@layout/fragment_system" />

    <fragment
        android:id="@+id/network_dest"
        android:name="com.adam.app.mydeviceinfo.ui.network.NetworkFragment"
        android:label="@string/nav_network"
        tools:layout="@layout/fragment_network" />

    <fragment
        android:id="@+id/tools_dest"
        android:name="com.adam.app.mydeviceinfo.ui.tools.ToolsFragment"
        android:label="@string/nav_tools"
        tools:layout="@layout/fragment_tools" />

</navigation>
